
A port to ECL has been merged (Juan Jose Garcia Ripoll)

With the addition of an implementation of DYNAMIC-EXTENT &REST lists
to SBCL, various functions (e.g. READ-INPUT, QUEUE-EVENT) in CLX
should cons less.

A Texinfo version of the CLX manual as been added.

The portable-clx mailing list has been created for development discussion
and bug reports

---  Changes in SBCL CLX 0.5.4, Tue Nov 11 00:02:43 2003   ---

A change in the implementation of PROCESS-BLOCK and PROCESS-WAKEUP
under multithreaded SBCL.  Previous versions used queues and condition
variables, but this seems to have undesireable performance
characteristics; the newer version uses a polling loop calling
sched_yield() inside, which greatly improves responsiveness, but is
more CPU-hungry (as perceived by top(1), at least; in theory it
only hogs the CPU when nobody else wants it).


---  Changes in SBCL CLX 0.5.3, Sat Sep  6 12:14:39 UTC 2003 ---

We allow a PIXMAP-DEPTH of 12 in clx.lisp, despite not having any
image routines for it, to allow clx to load when running under eXceed.
Image routines are unlikely to work in such circumstances.

Bug fixes

 * ERROR idiom (xvidmode.lisp)
 * Add timestamp in NEWS file

---  Changes in SBCL CLX 0.5.2, about twenty minutes before 0.5.3  ---

OPEN-DEFAULT-DISPLAY now takes an optional argument for the display
name, which has the same "protocol/host:display.screen" format as used
by the C libX11 (XOpenDisplay).  OPEN-DISPLAY is not actively
deprecated, but is much less useful by comparison

Inclusion of two new tests/demos (from Ingvar Mattson):
 * demo/clclock: a simple clock application;
 * demo/mandel: a Mandelbrot set viewer.

Bug fixes

 * Fix bad type declarations in TEXT-EXTENTS-SERVER and
   TEXT-WIDTH-SERVER (text.lisp)
 * Fix FORMAT argument mismatch error in WRITE-BITMAP-FILE (image.lisp)

---  Changes in SBCL CLX 0.5.1, Wed Jun 25 14:20:31 BST 2003  ---

experimental RENDER extension support (from Gilbert Baumann)